<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onBoarding.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        app:srcCompat="@drawable/ic_sign_in"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
    
    <TextView
        android:id="@+id/title_sign_in"
        style="@style/Text.Title"
        android:text="@string/title_sign"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/navy_dark"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/desc_sign_in"
        style="@style/Text.Desc"
        android:text="@string/desc_sign_in"
        android:layout_marginHorizontal="32dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="7dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_sign_in"/>

    <com.example.mystoryapp.ui.onBoarding.customView.EmailEditTextCustom
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/desc_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.mystoryapp.ui.onBoarding.customView.PasswordEditTextCustom
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:alpha="0"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="25dp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/sign_in_to_sign_up"
        style="@style/Text.Desc"
        android:text="@string/signin_to_signup"
        android:gravity="center_horizontal"
        android:layout_marginBottom="35dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/transparent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>