<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_story"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/story_user_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_avatar"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/story_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/dummy_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:transitionName="story_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/story_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/story_user_avatar" />

        <TextView
            android:id="@+id/story_date_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date"
            android:textSize="10sp"
            android:textColor="@color/gray"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="10dp"
            app:layout_constraintTop_toBottomOf="@id/story_username"
            app:layout_constraintStart_toStartOf="@id/story_username"/>

        <TextView
            android:id="@+id/story_desc"
            android:layout_marginTop="10dp"
            android:text="@string/dummy_desc"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/story_user_avatar"
            style="@style/Text.Desc"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/story_image"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedCorners"
            app:srcCompat="@drawable/ic_start_traveling"
            app:layout_constraintTop_toBottomOf="@id/story_desc"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>