<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.detailStory.DetailStoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/story_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:text="@string/dummy_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/storyy_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/storyy_user_avatar" />

        <TextView
            android:id="@+id/story_date_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date"
            android:textColor="@color/gray"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/story_username"
            app:layout_constraintTop_toBottomOf="@id/story_username"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="10dp" />

        <TextView
            android:id="@+id/story_desc"
            style="@style/Text.Desc"
            android:layout_marginTop="10dp"
            android:text="@string/dummy_desc"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyy_user_avatar" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/story_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:transitionName="story_iamge"
            app:shapeAppearanceOverlay="@style/roundedCorners"
            app:srcCompat="@drawable/ic_start_traveling"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/story_desc"
           />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/storyy_user_avatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_avatar"
            android:transitionName="avatar_profile"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->
</androidx.constraintlayout.widget.ConstraintLayout>